updated runScript.txt for future usage

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,7 @@ html/
 
 ######################### Validation Scripts & Testing #########################
 output*/
+
+res.avi
+caffe-tensorflow/*
+res_*.avi
